# cpp-websocket-audio

./: .gitignore  CMakeLists.txt  README.md
client/: LICENSE  web_client.html  ws-audio-api.js
server/: LICENSE  header.hpp  listener.cpp  listener.hpp  server.cpp  server_certificate.hpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp  websocket_session.hpp
